# prodmesh-rta

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1  build.sh  requirements.txt  rta.py  run.bat  run.command
.github/workflows/: build.yml  release.yml
assets/: make_icon.py
macos/: AppIcon.icns  Info.plist.in  entitlements.plist
src/: api.h  audio.h  dsp.h  main.cpp  metrics.h  webui.h  widgets.h
